ensureing that the center nav button dosen't get too large.

--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -11,5 +11,6 @@
 }
 
 .lb-c-navigation__button--center {
-  flex: 0 0 15em;
+  flex: 0 0 25%;
+  max-width: 160px;
 }
